# backdrop

./: .editorconfig  .gitignore  .prettierignore  LICENSE  README.md  backdrop.sh  install.sh  package-lock.json  package.json  release-please-config.json  uninstall.sh
.github/: CONTRIBUTING.md
.github/workflows/: release.yml  test.yml
flatpak/: com.andrewensley.backdrop.desktop  com.andrewensley.backdrop.yml
frontend/: index.html
scripts/: dev-setup.js
snap/: snapcraft.yaml
src/: backdrop.psd1  backdrop.psm1  backdrop.service  backdrop.sh  install.ps1  install.sh
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  config.rs  image.rs  lib.rs  main.rs  screen.rs  timer.rs
src-tauri/src/sources/: apod.rs  bing.rs  earth.rs  eo.rs  iotd.rs  mod.rs  natgeo.rs  wmc.rs
src-tauri/src/wallpaper/: cinnamon.rs  cosmic.rs  gnome.rs  kde.rs  lxqt.rs  macos.rs  mate.rs  mod.rs  windows.rs  xfce.rs
test/: backdrop.bats  backdrop.tests.ps1
