[package]
name = "backdrop"
version = "1.0.0"
edition = "2021"

[lib]
name = "backdrop_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
chrono = "0.4"
anyhow = "1"
urlencoding = "2"
regex = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
